[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/WhiteCircle.png" type="Texture" id=1]
[ext_resource path="res://Menu/InitMenuCharacter.gd" type="Script" id=2]
[ext_resource path="res://Npcs/sprites/main_A.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 27.0964

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( -0.953064, 0.222226 )
scale = Vector2( 0.121, 0.121 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.508575, -1.86477 )
shape = SubResource( 1 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
